--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,16 @@
 group 'io.github.edufolly.flutterbluetoothserial'
 version '1.0-SNAPSHOT'
 buildscript {
+    ext.kotlin_version = '1.7.10'
+
     repositories {
         google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 rootProject.allprojects {
@@ -18,7 +21,7 @@ rootProject.allprojects {
 }
 apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -31,7 +34,7 @@ android {
         disable 'InvalidPackage'
     }
     dependencies {
-        implementation 'androidx.appcompat:appcompat:1.3.0'
+        implementation 'androidx.appcompat:appcompat:1.7.0'
     }
     buildToolsVersion '30.0.3'
 }
